<resources>
    <string name="app_name">FoodMateFrontend</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_confirm_password">Confirm Password</string>
    <string name="as_restaurant">As Restaurant</string>
    <string name="spinner_title">Select Type</string>

</resources>