<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5E9E6">

    <!-- Title Text -->
    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/register_title"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/registerTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/input_email"
        android:padding="10dp"
        android:textColorHint="#A9A9A9" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/emailInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="#A9A9A9" />

    <!-- Verification Code Input -->
    <LinearLayout

        android:id="@+id/verificationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/verificationCodeInput"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:hint="Verification Code"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#A9A9A9" />

        <Button
            android:id="@+id/sendVerificationCodeBtn"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"

            android:text="Send" />

    </LinearLayout>

    <!-- Register Button -->

    <Button
        android:id="@+id/registerSubmitButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/verificationLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4A03D"
        android:text="@string/register_button"
        android:textColor="#FFFFFF" />

</RelativeLayout>
