<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5E9E2">

    <!-- Title Text -->
    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/login_title"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/loginTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/input_email"
        android:padding="10dp"
        android:textColorHint="#A9A9A9" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/emailInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="#A9A9A9" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginSubmitButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/passwordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="#D4A03D"
        android:text="@string/login_button"
        android:textColor="#FFFFFF" />

    <!-- Login Options with Google and Apple -->
    <TextView
        android:id="@+id/loginOptionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginSubmitButton"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="or log in with"
        android:textSize="16sp"
        android:textColor="#000000" />

    <!-- Google and Apple Icons -->
    <LinearLayout
        android:id="@+id/socialIconsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginOptionsText"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/googleIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/google_icon" /> <!-- Use your Google icon here -->

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/appleIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/apple_icon" /> <!-- Use your Apple icon here -->
    </LinearLayout>

</RelativeLayout>
